# rust-tonic

./: .env  .gitignore  Cargo.toml  README.md  build.rs
commands/: rustcom.sh
proto/: user.proto
proto/user/: user.proto
src/: bookstore.rs  db_connection.rs  main.rs  user.rs
src/service/user/: postgresql_grpc.rs  user_service_monolithic.rs
src/service/user/redis/: delete.rs  get.rs  redis_monolithic.rs  set.rs
