[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"
# description = ""
# keywords = ""
# documentation = ""
# homepage = ""
# repository = ""
# authors = [""]
# license = ""
# rust-version = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { git = "https://github.com/hyperium/tonic", features = ["tls"] }
tonic-reflection = "0.5.0"

tokio = { version = "1.21.2", features = ["full"] }

prost = "0.11.2"
prost-derive = "0.11.2"
prost-types = "0.11.2"

redis = "0.22.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
serde_derive = "1.0.147"

bytes = "1.2.1"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
futures-preview = "0.2.2"
async-stream = "0.3.3"
http = "0.2.8"
tower = "0.4.13"
console = "0.15.2"

# Database (Mongodb)
# mongodb = { version = "2.2.0", default-features = false, features = ["async-std-runtime"] }
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
dotenv="0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }

# Help you use gRPC protobuf files in Rust.
[build-dependencies]
tonic-build = "0.8.2"